--- a/render.yaml
+++ b/render.yaml
@@ -7,10 +7,10 @@ services:
     startCommand: uvicorn main:app --host 0.0.0.0 --port 10000
     envVars:
       - key: BOT_TOKEN
-        value: "your_bot_token"
+        value: "8449771354:AAF6_ff8ZLNVUk1wYBlVzKTZZFbtYwIlY8I"
       - key: FK_API_KEY
-        value: "your_api_key"
+        value: "311594e82f06331d9813328f6d5cb219"
       - key: FK_SHOP_ID
-        value: "your_shop_id"
+        value: "64274"
       - key: FK_SECRET_KEY
-        value: "your_secret_key"
+        value: "?]_yr1XTWWeDWPI"
