--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-aiogram==3.4.1
-fastapi==0.111.0
-uvicorn==0.30.0
+aiogram==3.3.0
+fastapi==0.95.2
+uvicorn==0.21.1
 python-dotenv==1.0.1
 httpx==0.27.0
+pydantic==1.10.12
